# vlc-playlist-generator

./: .gitignore  pyproject.toml  test.py
playlistGen/: __init__.py  playlist.py
