[tool.poetry]
name = "playlistgen"
version = "0.1.0"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.3"
moviepy = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
